--- a/package.json
+++ b/package.json
@@ -13,8 +13,9 @@
     "build": "node build/build.js"
   },
   "dependencies": {
-    "view-design": "^4.0.0",
+    "iview": "^3.5.4",
     "screenfull": "^5.0.0",
+    "view-design": "^4.0.0",
     "vue": "^2.5.2",
     "vue-router": "^3.0.1",
     "xlsx": "^0.15.1"
